--- a/my-projrect/src/main/webapp/index1.html
+++ b/my-projrect/src/main/webapp/index1.html
@@ -11,7 +11,7 @@
 	<meta name="format-detection" content="telephone=no">	
 	<link rel="stylesheet" type="text/css" href="statics/plugins/layui/css/layui.css">
 	<link rel="stylesheet" type="text/css" href="statics/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="statics/css/index1.css">
+	<link rel="stylesheet" type="text/css" href="statics/css/frame.css">
 </head>
 <body>
 <div class="layui-layout layui-layout-admin" id="layui_layout">
@@ -79,7 +79,7 @@
 	<!-- 底部区域 -->
 	<div class="layui-footer layui-larry-foot" id="larry-footer">
 		<div class="layui-mian">
-		    Copyright &copy; 2017 <a href="http://www.renren.io" target="_blank">renren.io</a> All Rights Reserved
+		    Copyright &copy; 2017 <a href="XXX" target="_blank">XXX</a> All Rights Reserved
 		</div>
 	</div>
 	
@@ -89,7 +89,7 @@
 		<form class="layui-form" action="">
 			<div class="layui-form-item">
 		    	<label class="layui-form-label">账号</label>
-		    	<label class="layui-form-label laber-account">{{user.username}}</label>
+		    	<label class="layui-form-label laber-account">{{user.userName}}</label>
 			</div>
 			<div class="layui-form-item">
 		    	<label class="layui-form-label">原密码</label>
