--- a/my-projrect/src/main/webapp/login.html
+++ b/my-projrect/src/main/webapp/login.html
@@ -32,7 +32,7 @@
         <h4 style="margin-bottom: 0px;"><i class="fa fa-exclamation-triangle"></i> {{errorMsg}}</h4>
       </div>
       <div class="form-group has-feedback">
-        <input type="text" class="form-control" v-model="username" placeholder="账号">
+        <input type="text" class="form-control" v-model="userName" placeholder="账号">
         <span class="glyphicon glyphicon-user form-control-feedback"></span>
       </div>
       <div class="form-group has-feedback">
@@ -76,7 +76,7 @@
 var vm = new Vue({
 	el:'#rrapp',
 	data:{
-		username: '',
+		userName: '',
 		password: '',
 		captcha: '',
 		error: false,
@@ -93,7 +93,7 @@ var vm = new Vue({
 			this.src = "captcha.jpg?t=" + $.now();
 		},
 		login: function (event) {
-			var data = "username="+vm.username+"&password="+vm.password+"&captcha="+vm.captcha;
+			var data = "userName="+vm.userName+"&password="+vm.password+"&captcha="+vm.captcha;
 			$.ajax({
 				type: "POST",
 			    url: "sys/login",
